Bug 1075702 - Fixed implementation of Element.setAttributeNode(). r=bz